--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -54,6 +54,8 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
+<script src="http://harvesthq.github.io/chosen/chosen.jquery.js"></script>
+
 <script>
   function renderToast(objectAssign = {}) {
     $.toast({
