--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -36,7 +36,10 @@
       type="image/x-icon"
       href="/assets/img/favicon.ico"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://harvesthq.github.io/chosen/chosen.css"
+    />
     <link
       href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css"
       rel="stylesheet"
@@ -439,6 +442,31 @@
                 >
               </li>
 
+              
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/category/list" class="dash-link">
+                  <span class="dash-micon"
+                    ><i class="fa-solid fa-box"></i
+                  ></span>
+                  <span class="dash-mtext text-w">Trainer Category</span>
+                </a>
+              </li>
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/trainer/list" class="dash-link">
+                  <span class="dash-micon"
+                    ><i class="fa-solid fa-box"></i
+                  ></span>
+                  <span class="dash-mtext text-w">Trainers</span>
+                </a>
+              </li>
+              <li class="dash-item dash-hasmenu">
+                <a href="/admin/plan/list" class="dash-link">
+                  <span class="dash-micon"
+                    ><i class="fa-solid fa-box"></i
+                  ></span>
+                  <span class="dash-mtext text-w">Plans</span>
+                </a>
+              </li>
               <li class="dash-item dash-hasmenu dropdown sidebar-dropdown">
                 <a href="#" class="dash-link menu-toggle nav-link has-dropdown"
                   ><span class="dash-micon"
@@ -457,22 +485,6 @@
                 </div>
               </li>
               <li class="dash-item dash-hasmenu">
-                <a href="/admin/trainer/list" class="dash-link">
-                  <span class="dash-micon"
-                    ><i class="fa-solid fa-box"></i
-                  ></span>
-                  <span class="dash-mtext text-w">Trainers</span>
-                </a>
-              </li>
-              <li class="dash-item dash-hasmenu">
-                <a href="/admin/package/list" class="dash-link">
-                  <span class="dash-micon"
-                    ><i class="fa-solid fa-box"></i
-                  ></span>
-                  <span class="dash-mtext text-w">Packages</span>
-                </a>
-              </li>
-              <li class="dash-item dash-hasmenu">
                 <a href="/admin/notification/list" class="dash-link"
                   ><span class="dash-micon"
                     ><i class="fa-solid fa-users"></i> </span
@@ -484,10 +496,10 @@
                   <span class="dash-micon"
                     ><i class="fa-solid fa-chalkboard-user"></i
                   ></span>
-                  <span class="dash-mtext text-w">Classes </span>
+                  <span class="dash-mtext text-w">Schedule </span>
                 </a>
               </li>
-              <li class="dash-item dash-hasmenu">
+              <!-- <li class="dash-item dash-hasmenu">
                 <a href="/admin/coupon/list" class="dash-link">
                   <span class="dash-micon"
                     ><i class="fa-solid fa-code-commit"></i
@@ -503,8 +515,8 @@
                   ></span>
                   <span class="dash-mtext text-w">Blogs</span>
                 </a>
-              </li>
-
+              </li> -->
+<!-- 
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/banners/list" class="dash-link">
                   <span class="dash-micon"
@@ -548,7 +560,7 @@
                   ></span>
                   <span class="dash-mtext text-w">Sliders</span>
                 </a>
-              </li>
+              </li> -->
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/payment/list" class="dash-link">
                   <span class="dash-micon"
@@ -591,7 +603,7 @@
                 >
                 <div class="sidebar-submenu">
                   <ul class="dropdown-menu-item">
-                    <li class="dropdown-item">
+                    <!-- <li class="dropdown-item">
                       <a href="/admin/web_slider/list">Slider</a>
                     </li>
                     <li class="dropdown-item">
@@ -605,13 +617,13 @@
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/talk_to_expert/list">Talk To Expert</a>
-                    </li>
-                    <li class="dropdown-item">
+                    </li> -->
+                    <!-- <li class="dropdown-item">
                       <a href="/admin/web_services/list"> Services</a>
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/web_apart/list">Website Apart</a>
-                    </li>
+                    </li> -->
                     <li class="dropdown-item">
                       <a href="/admin/web_faq/list">Faq</a>
                     </li>
@@ -630,31 +642,31 @@
                     <li class="dropdown-item">
                       <a href="/admin/web_hero/list">Hero</a>
                     </li>
-                    <li class="dropdown-item">
+                    <!-- <li class="dropdown-item">
                       <a href="/admin/view_full_answer/list"
                         >View Full Answer</a
                       >
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/user_say/list">User Say</a>
-                    </li>
+                    </li> -->
                     <li class="dropdown-item">
                       <a href="/admin/transformations/list">Transformations</a>
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/setting_footer/list">Footer</a>
                     </li>
-                    <li class="dropdown-item">
+                    <!-- <li class="dropdown-item">
                       <a href="/admin/web_contact/list">Contact</a>
                     </li>
                     <li class="dropdown-item">
                       <a href="/admin/setting/list">Setting</a>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </li>
 
-              <li class="dash-item dash-hasmenu dropdown sidebar-dropdown">
+              <!-- <li class="dash-item dash-hasmenu dropdown sidebar-dropdown">
                 <a href="#" class="dash-link menu-toggle nav-link has-dropdown"
                   ><span class="dash-micon">
                     <i class="fa-solid fa-file-circle-plus"></i>
@@ -680,7 +692,7 @@
                     </li>
                   </ul>
                 </div>
-              </li>
+              </li> -->
 
               <!-- 
               <li class="dash-item">
