--- a/views/admin/trainer-list.ejs
+++ b/views/admin/trainer-list.ejs
@@ -67,7 +67,7 @@
                           <td>
                             <img
                               alt="file"
-                              src="/uploads/trainer/<%= trainer.image %>"
+                              src= <%= trainer.image %>
                               height="50px"
                               width="50px"
                             />
